feat: Update unified design system and remove unused React files

--- a/index.html
+++ b/index.html
@@ -251,8 +251,12 @@
         <li><a href="contact.html" class="nav-link">Contact</a></li>
          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
       </ul>
-      <button class="navbar-toggle" onclick="toggleNavbar()" aria-label="Toggle navigation">
-        <span>&#8942;</span>
+      <button class="navbar-toggle" onclick="toggleSidePanel()" aria-label="Toggle navigation">
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </button>
     </div>
   </nav>
