--- a/resources.html
+++ b/resources.html
@@ -3,15 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <ti  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 SafeHer | Women's Cybersecurity Awareness</p>
-  </footer>
-  
-  <!-- Unified Global JavaScript -->
-  <script src="js/global-unified.js"></script>
-</body>
-</html>feHer | Resources - Women's Safety & Cybersecurity</title>
+  <title>SafeHer | Resources - Women's Safety & Cybersecurity</title>
   <meta name="description" content="Access trusted cybersecurity resources, safety tools, and helplines designed specifically for women's protection and empowerment.">
   
   <!-- Unified Design System -->
